<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/fragment_login_userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_account_no" >
        </EditText>

        <EditText
            android:id="@+id/fragment_login_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?android:attr/editTextBackground"
            android:hint="@string/hint_password"
            android:inputType="textPassword" >

        </EditText>

        <CheckBox
            android:id="@+id/fragment_login_rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/login_remember_me" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp" >

        <Button
            android:id="@+id/fragment_login_registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_shape_regiester"
            android:text="@string/login_register"
            android:textColor="#556699" 
            />

        <Button
            android:id="@+id/fragment_login_loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_shape"
            android:textColor="@drawable/button_text_color"
            android:text="@string/login_login"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_vertical|right"
        android:paddingRight="30dp" >

        <ImageButton
            android:id="@+id/fragment_login_signInImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_signin"
            android:contentDescription="@string/hint_sign_in"
             />

    </LinearLayout>

</LinearLayout>